# aegis

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
admin-studio/: README.md  index.html  package.json  vite.config.ts
admin-studio/src/: App.tsx  main.tsx
backend/: __init__.py  main.py
backend/api/: admin_router.py  document_router.py  inference_router.py  intent_router.py  memory_router.py  plugin_router.py  routers.py  security_router.py  speech_router.py  training_router.py
backend/application/: __init__.py
backend/domain/: __init__.py  models.py
backend/infrastructure/: __init__.py  container.py  di.py
backend/shared/: config.py  exceptions.py  logging.py
client/: README.md  __init__.py  admin.py  aegis.py  base.py  documents.py  index.html  inference.py  package.json  security.py  training.py  vite.config.ts
client/src/: App.tsx  main.tsx
datasets/fixture/: train.jsonl  val.jsonl
docs/: persistence.md  testing_strategy.md  ui-pages.md
docs/administration/: api_guide.md
docs/architecture/: conventions.md  db_layer.md  inference.md  intent.md  memory.md  offline_setup.md  overview.md  phase3_document_knowledge.md  phase4_intent_engine.md  phase5_auxiliary_engines.md  plugin_speech.md  rag.md  training.md
docs/modules/: inference.md
docs/security/: compliance_checklist.md  hardening.md  threat_model.md
packaging/: README.md
requirements/: base.txt  dev.txt  ml.txt
scripts/: init_local.py
tests/: conftest.py
tests/e2e/: conftest.py  test_document_page.py  test_inference_page.py  test_memory_page.py
tests/fixtures/: sample.csv  sample.eml  sample.html  sample.json  sample.md  sample.txt  sample.xml
tests/integration/: test_backup.py  test_config_manager.py  test_encryption.py  test_persistence.py  test_storage.py
tests/unit/: test_benchmark_latency.py  test_config.py  test_context_manager.py  test_core_ai_service.py  test_db_layer.py  test_document_engine.py  test_exceptions.py  test_intent_engine.py  (+15 more)
(+355 files in other folders)
