[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[project]
name = "aegis-backend"
version = "0.1.0"
description = "Aegis — Offline-First Enterprise AI Platform (Mamba/SSM)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Riccardo Bertolini" }]

dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # DB / ORM
    "sqlmodel>=0.0.19",
    "aiosqlite>=0.20.0",

    # Analytics DB
    "duckdb>=0.10.3",

    # Vector store (local, embedded)
    "chromadb>=0.5.0",

    # SSM inference
    # NOTE: mamba-ssm requires CUDA; for CPU-only use causal-conv1d + selective-scan-cuda alternatives
    # Pin exact versions in requirements/ml.txt after local testing
    # "mamba-ssm>=1.2.0",  # uncomment when GPU available

    # Document parsing (offline)
    "pypdf>=4.2.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.2",
    "python-pptx>=0.6.23",

    # Logging
    "structlog>=24.1.0",

    # Security
    "cryptography>=42.0.5",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.1",
    "pyjwt[crypto]>=2.8.0",

    # Scheduling
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "black>=24.4.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "--ignore=tests/e2e"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]
ignore = ["E501", "E741", "B007", "B008", "B904", "B905"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
